--- a/cocktail-explorer/src/styling/HomePage.css
+++ b/cocktail-explorer/src/styling/HomePage.css
@@ -1,12 +1,16 @@
 #HomePage {
-  width: 100vw;
-  height: 100vh;
   display: flex;
   align-items: center;
   flex-flow: column;
+}
+#HomePage > * {
+  padding: 1.5vw 0;
 }
 #HomePage > h1 {
   color: #74d870;
   text-align: center;
   font-size: 5vw;
+}
+#HomePage > img {
+  width: 40vw;
 }
