--- a/cocktail-explorer/src/styling/NavBar.css
+++ b/cocktail-explorer/src/styling/NavBar.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 #NavBar > a {
-  text-decoration: none;
   margin: 0 0.6vw;
-  font-weight: 500;
+  font-weight: 400;
+  font-size: 1.4vw;
 }
